--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,6 @@ apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.1"
     defaultConfig {
         applicationId "com.example.vasudev.minesweeper"
         minSdkVersion 16
@@ -21,21 +20,20 @@ android {
 }
 
 dependencies {
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    compile 'com.android.support:appcompat-v7:26.+'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.github.glomadrian:Grav:1.1'
-    compile 'com.github.dakatso:livebutton:1.0.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation 'com.android.support:appcompat-v7:26.+'
+
+    //lottie
+    implementation 'com.airbnb.android:lottie:2.5.0'
+
     testCompile 'junit:junit:4.12'
 }
 repositories {
     mavenCentral()
-    maven {
-        url "http://dl.bintray.com/glomadrian/maven"
-    }
 }
 apply plugin: 'kotlin-android-extensions'
