--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,10 @@ android {
 }
 
 dependencies {
+    //views
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:design:26.1.0'
+    //firebase
     implementation 'com.google.firebase:firebase-firestore:11.8.0'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
