--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".GameActivity.GameActivity"></activity>
+        <activity android:name=".GameActivity.GameActivity" />
+        <activity android:name=".ScoreKeeping.ScoresActivity"></activity>
     </application>
 
 </manifest>
