--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,9 @@ dependencies {
     //lottie
     implementation 'com.airbnb.android:lottie:2.5.0'
 
+    //eventbus
+    implementation 'org.greenrobot:eventbus:3.1.1'
+
     testCompile 'junit:junit:4.12'
 }
 repositories {
